add table of contents

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -58,6 +58,10 @@ taxonomies:
   author: authors
 markup:
   _merge: deep
+  tableOfContents:
+  endLevel: 3
+  ordered: false
+  startLevel: 2
 related:
   threshold: 80
   includeNewer: true
