--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,177 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Linji Wang
+    - name: Email
+      value: joewwang@outlook.com
+    - name: Phone
+      value: 412-888-6071
+    - name: Location
+      value: Fairfax, VA
     - name: Languages
-      value: English, German
+      value: English, Chinese
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Ph.D. in Computer Science
+      institution: George Mason University, Fairfax, VA
+      year: Sep 2023 - May 2027 (Expected)
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Specialization in AI and Robotics
+        - Research Focus - Generative AI and Reinforcement Learning for Robotic Systems
+        - Relevant Coursework - Advanced Machine Learning, Deep Learning, Reinforcement Learning, Computer Vision
+    - title: M.Sc. in Mechanical Engineering
+      institution: Carnegie Mellon University, Pittsburgh, PA
+      year: Sep 2021 - May 2023
       description:
-        - Description 1.
-        - Description 2.
+        - GPA - 3.94/4.0 (98.5%)
+        - Relevant Coursework - Machine Learning, Deep Learning, Computer Vision, Deep Reinforcement Learning & Control
 
-- title: Experience
+- title: Professional Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Software Development Engineer Intern
+      institution: Amazon Web Services (AWS) - RDS Proxy Team, Bellevue, WA
+      year: May 2025 - Aug 2025
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+        - Developed IPEBench Data Visualization Platform with Streamlit, creating 8 interactive visualization types that reduced engineers' performance regression analysis time from 8 hours to 15 minutes
+        - Built production-grade Regression Testing Framework (10,000+ lines) with statistical analysis (Welch's t-test, power analysis, Bonferroni correction) achieving 99% confidence in detecting performance regressions
+        - Implemented adaptive sampling system using Thompson Sampling and Bayesian optimization for convergence detection, improving test reliability from 47% to 90% and eliminating false positives that previously blocked deployments
+        - Integrated AWS CloudWatch metrics with automated dashboard generation, enabling real-time performance monitoring and data-driven decision making for RDS proxy deployments across multiple regions
+        - Technologies - Python, Streamlit, AWS RDS, CloudWatch, Docker, Statistical Analysis, Machine Learning
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Research Experience
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Research Project - Grounded Curriculum Learning for Efficient Reinforcement Learning in Robotics
+      institution: RobotiXX Lab, George Mason University, Fairfax, VA
+      year: Aug 2023 - Present
+      description:
+        - Developed Grounded Curriculum Learning (GCL), a novel framework integrating real-world data with adaptive simulated task generation for robotic RL
+        - Implemented and optimized parallel RL algorithms (PPO, SAC) in IsaacGym, achieving 24.58% higher success rate and 50% improved sample efficiency
+        - Designed a fully-informed teacher agent for task generation and curriculum adaptation, demonstrating superior generalization to unseen environments
+        - Conducted large-scale experiments using the BARN dataset for challenging constrained navigation tasks
+        - Paper submitted to IEEE International Conference on Robotics and Automation (ICRA) 2024
+    - title: Research Assistant - 3D AR Scene Inpainting via Deep Learning
+      institution: Computational Engineering and Robotics Lab, CMU, Pittsburgh, PA
+      year: Jan 2022 - May 2023
+      description:
+        - Developed an end-to-end deep learning pipeline for 3D AR scene inpainting, achieving 92% accuracy in scene completion
+        - Implemented and fine-tuned a GAN model for image inpainting, improving texture realism by 35% over baseline methods
+        - Applied RANSAC and DBSCAN algorithms for efficient 3D point cloud segmentation, reducing processing time by 40%
+    - title: Research Assistant - Recycled Paper Classification
+      institution: Bio-robotics Lab, CMU, Pittsburgh, PA
+      year: Sep 2021 - Dec 2021
+      description:
+        - Designed and trained a CNN model using PyTorch for recycled paper-grade classification, achieving 97% accuracy on a dataset of 10,000+ images
+        - Implemented data augmentation techniques to improve model generalization and robustness
+        - Developed real-time image processing pipeline using OpenCV, handling 30 frames per second
+        - Applied transfer learning techniques to adapt pre-trained models for custom classification tasks
 
-- title: Honors and Awards
+- title: Teaching Experience
   type: time_table
   contents:
-    - year: 1921
+    - title: Teaching Assistant - Introduction to Programming
+      institution: George Mason University
+      year: Fall 2023
+    - title: Teaching Assistant - Artificial Intelligence and Machine Learning
+      institution: Carnegie Mellon University
+      year: Fall 2022
+    - title: Teaching Assistant - System Dynamics, Fluid Dynamics and Engineering Models
+      institution: University of Cincinnati
+      year: Fall 2020
+
+- title: Relevant Projects
+  type: time_table
+  contents:
+    - title: Flexible Long-Term Mortality Prediction
+      year: May 2023 - July 2023
+      description:
+        - Lead Developer using Deep Learning
+        - Developed a survival analysis model integrating CNN (MobileNet v2) with a Cox Proportional Hazards model
+        - Implemented attention mechanisms to focus on critical areas in radiography images
+        - Achieved 15% improvement in prediction accuracy compared to traditional statistical methods
+
+- title: Technical Skills
+  type: nested_list
+  contents:
+    - title: Programming Languages
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
+        - Python (Advanced)
+        - C++ (Intermediate)
+        - SQL
+        - Bash
+        - CUDA (Basic)
+    - title: ML/DL Frameworks
       items:
-        - Max Planck Medal
+        - PyTorch
+        - TensorFlow
+        - JAX
+        - Streamlit
+        - Plotly
+        - OpenAI Gym
+    - title: AWS & Cloud Technologies
+      items:
+        - Amazon RDS
+        - CloudWatch
+        - EC2
+        - Lambda
+        - S3
+        - Docker
+        - Kubernetes
+    - title: Robotics & Simulation
+      items:
+        - ROS
+        - IsaacGym
+        - MuJoCo
+    - title: AI & Statistical Techniques
+      items:
+        - Reinforcement Learning
+        - Hypothesis Testing
+        - Power Analysis
+        - A/B Testing
+        - Regression Analysis
+        - GANs
+        - Adaptive Sampling
+    - title: Tools & Libraries
+      items:
+        - NumPy
+        - Pandas
+        - Matplotlib
+        - Plotly
+        - OpenCV
+        - Git
+        - CI/CD
+        - MLflow
+
+- title: Publications & Presentations
+  type: time_table
+  contents:
+    - year: 2024
+      items:
+        - Wang, L., et al. "Grounded Curriculum Learning for Robotics" - Submitted to ICRA 2024
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Reinforcement Learning
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Curriculum Learning for Robotics
+        - Sim-to-Real Transfer
+        - Multi-Task Learning
+    - title: Computer Vision
       items:
-        - Description 1.
-        - Description 2.
+        - 3D Scene Understanding
+        - AR/VR Applications
+        - Image Inpainting with GANs
+    - title: Robotics
+      items:
+        - Robotic Manipulation
+        - Navigation in Constrained Environments
+        - Human-Robot Interaction
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Photography, Hiking, Reading Science Fiction
